# dasio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  __main__.py  dasdata.py  dasfile.py  extract_events.py  pyproject.toml  signal.py  utils.py
.github/workflows/: ci.yml
cpp/: __init__.py  filters.hpp
dasio/: __init__.py  __main__.py  dasdata.py  dasdb.py  dasfile.py  dasinfo.py  desample.py  noise.py  picking.py  plot.py  processing.py  schema.py  signal.py
dasio/cpp/: bandpass2d.cpp
dasio/readers/: apsensing.py  asn.py  constants.py  detector.py  event.py  optasense.py  passcal_segy.py  proc.py
readers/: detector.py  optasense.py  proc.py
tests/: conftest.py  test_bandpass_numeric.py  test_constants.py  test_dasdb_read.py  test_downsample.py  test_fixtures_read.py  test_no_realtimemonitor_refs.py  test_noise.py  test_packaging_smoke.py  test_passcal_segy.py  test_physical_factor.py  test_picking.py  test_plot.py  test_select_channels.py  test_units.py
